tests/rascal/negative/name_errors/L2/7_undecl-in-for.ob
MODULE Bla;
VAR
  x: INTEGER;

BEGIN
  FOR x := 1 TO 2 DO
    y := 1
  END
END Bla.